# gongxun-v

./: CMakeLists.txt  helloworld  manifest.xml  package_init.sh
config/: fv100.yaml  gf100.yaml
include/: parameters.h
launch/: usb_cam.launch
scripts/: exportDistanceMap.py
src/: camera.cpp  helloworld.cpp  parameters.cpp
src/draft/: CMakeLists.txt  package.xml
src/draft/include/: parameters.h  yolov8.hpp
src/draft/launch/: usb_cam.launch
src/draft/scripts/: deepseekco.py
src/draft/src/: camera.cpp  helloworld.cpp  mouse.cpp  parameters.cpp  testbridge copy.cpp  testbridge.cpp  yolov8.cpp
